# Anthias-risk-monitoring

./: README.md  main.py  monitor.py  pyproject.toml
config/: __init__.py  config.py  constants.py  logging_config.py
core/: __init__.py  address_manager.py  api_client.py  performance.py  position_updater.py  snapshot_processor.py  system_monitor.py  utils.py
db/: __init__.py  connection.py  db_manager.py  schema.sql
order_book_server/: .env  .env.example  setup_aws.sh  test_metrics.sh
order_book_server/server/: Cargo.toml
order_book_server/server/src/: lib.rs
order_book_server/server/src/market_metrics/: config.rs  database.rs  hyperliquid_client.rs  mod.rs  monitor.rs  types.rs
order_book_server/server/src/servers/: websocket_server.rs
user_monitoring/: .env.example  main.py  metrics_user.py  monitor.py  pyproject.toml  run.sh
user_monitoring/config/: config.py  constants.py  logging_config.py
user_monitoring/core/: __init__.py  address_manager.py  position_updater.py  snapshot_processor.py  utils.py
user_monitoring/db/: __init__.py  db_manager.py  queries.py  schema.sql
