[project]
name = "hyperliquid-position-monitor"
version = "1.0.0"
description = "Hyperliquid position monitoring system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asyncpg>=0.27.0",
    "aiohttp>=3.8.0",
    "ijson>=3.3.0",
    "psutil>=7.1.0",
    "msgpack>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
